--- a/Templates/package.json
+++ b/Templates/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -16,6 +16,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.22.0",
     "jquery": "^3.1.1",
     "object-assign": "^4.1.0",
     "path": "^0.12.7",
